syntax = "proto3";

package models;

option go_package = "github.com/drblury/protoflow/examples/models";

message OrderCreated {
  string order_id = 1;
  string customer = 2;
}

message OrderProcessed {
  string order_id = 1;
  string status = 2;
}
